--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -33,7 +33,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Spring Boot QueryDSL Security</a>
+            <a class="navbar-brand" href="#">Spring Boot Faster</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
