--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -33,7 +33,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <img class="navbar-brand" alt="Logo" src="/favicon.ico"/>
+            <img class="navbar-brand" alt="Logo" th:src="@{/favicon.ico}"/>
             <a class="navbar-brand" href="#">Spring Boot Faster</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
