实现基本权限体系

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -81,14 +81,15 @@
         <thead>
         <th>名称</th>
         <th>生日</th>
-        <th sec:authorize="hasRole('ROLE_USER')">操作</th>
+        <th sec:authorize="principal.hasPermission('USER_DELETE')">操作</th>
         </thead>
         <tbody>
         <tr th:each="user, curr : ${users}">
             <td><span th:text="${user.username}"/></td>
             <td><span th:text="${#dates.format(user.birthday,'yyyy-MM-dd')}"/></td>
-            <td><a href="#" th:href="@{/deleteUser(userId=${user.userId})}"
-                   sec:authorize="hasRole('ROLE_USER')" class="btn btn-danger btn-sm">删除</a></td>
+            <td sec:authorize="principal.hasPermission('USER_DELETE')">
+                <a href="#" th:href="@{/deleteUser(userId=${user.userId})}"
+                   class="btn btn-danger btn-sm">删除</a></td>
         </tr>
         </tbody>
     </table>
