登陆改成登录

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>用户登陆</title>
+    <title>用户登录</title>
     <link rel="stylesheet" th:href="@{css/bootstrap.min.css}"/>
     <style type="text/css">
         body {
@@ -38,7 +38,7 @@
                 <li><a th:href="@{/swagger-ui.html}">接口文档</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a th:href="@{/login}">请登陆</a></li>
+                <li><a th:href="@{/login}">请登录</a></li>
             </ul>
         </div>
     </div>
@@ -49,9 +49,9 @@
         <strong>注销成功！</strong>
     </div>
     <div th:if="${param.error}" class="alert alert-warning">
-        <strong>登陆失败！</strong>
+        <strong>登录失败！</strong>
     </div>
-    <h2>用户登陆</h2>
+    <h2>用户登录</h2>
     <form th:action="@{/login}" action="/login" method="post">
         <div class="form-group">
             <input type="text" class="form-control" name="username" value="元宝" placeholder="用户名"/>
@@ -60,7 +60,7 @@
             <input type="password" class="form-control" name="password" value="yb" placeholder="密码"/>
         </div>
         <input type="reset" value="重置" class="btn btn-info col-md-4 col-md-offset-2"/>
-        <input type="submit" value="登陆" class="btn btn-primary col-md-4"/>
+        <input type="submit" value="登录" class="btn btn-primary col-md-4"/>
     </form>
 </div>
 
